sidebar/navbar updates

--- a/frontend/styles/sidebar.css
+++ b/frontend/styles/sidebar.css
@@ -84,7 +84,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.3);
   z-index: 100;
   display: none;
 }
