whitepaper , new layout for ssg pages, improvemts

--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -208,15 +208,30 @@ code {
 }
 
 .slide {
-  transform: scale(0.02);
-  transition: transform 2600ms;
-  opacity: 0.5;
+  transform: scale(0.6) translate3D(0, -200px, 0px);
+  transition: transform 6000ms;
+  /* opacity: 0.6; */
+  padding-bottom: 200px;
+  animation: off 2s ease-in-out forwards;
+  overflow: visible;
 }
 
 .activeSlide {
   transform: scale(1.1);
-  transition: transform 2600ms;
-  opacity: 1;
+  transition: transform 2000ms;
+  animation: change 2s ease-in-out forwards;
+  /* opacity: 1; */
+}
+
+@keyframes change {
+  to {
+    opacity: 1
+  }
+}
+@keyframes off {
+  to {
+    opacity: 0.6
+  }
 }
 
 .arrow {
