Tweeks per review with Iskhan.

--- a/frontend/styles/sidebar.css
+++ b/frontend/styles/sidebar.css
@@ -39,7 +39,7 @@
   z-index: 1009;
 }
 .pro-sidebar > .pro-sidebar-inner {
-  background: #212990;
+  background: #1A1D22;
   height: 100%;
   position: relative;
   z-index: 101;
